Fix toggle menu on mobile view.

--- a/app/assets/stylesheets/layout.styl
+++ b/app/assets/stylesheets/layout.styl
@@ -102,3 +102,22 @@ li.login-nav-button a
   header#header > div.navbar.navbar-default.navbar-fixed-top > div.container
     width 100%
     
+@media (max-width: 767px)
+  .navbar-header
+    height 78px
+
+  .navbar-toggle
+    margin 22px 10px
+
+  .collapse.navbar-collapse
+    padding 0 13px
+
+  .navbar-collapse ul
+    margin 0 -15px    
+    background dark-transparent-70
+
+  .navbar-collapse li
+    margin 0 2px
+
+  li.logout-nav-button a
+    padding-left 0
